# sketches

./: .gitignore
adventofcode/1/: CMakeLists.txt  first.cpp
adventofcode/2/: CMakeLists.txt  second.cpp
adventofcode/2019/common/: CMakeLists.txt
adventofcode/2019/day_1/1/: CMakeLists.txt
adventofcode/2019/day_2/1/: CMakeLists.txt
adventofcode/2020/day_1/: day_1.py
adventofcode/day_1/1/: first.cpp
cmake/factorial_with_lib/: CMakeLists.txt
cmake/hello_world/: CMakeLists.txt  hello_world.cpp
coding_interview/divide/: Makefile  divide.cpp
coding_interview/duplicates_linked_list/: Makefile  duplicates_linked_list.cpp
coding_interview/hash_table/: Makefile  hash_table.cpp
coding_interview/max_sub_array/: Makefile  max_sub_array.cpp
coding_interview/permutations/: Makefile  permutations.cpp
coding_interview/reverse_c_str/: Makefile  reverse_c_str.cpp
coding_interview/unique_characters/: Makefile  unique_characters.cpp
cpp/boost_filesystem/: Makefile  boost_filesystem_tests.cpp
cpp/boost_program_options/: Makefile  boost_program_options.cpp
cpp/console/: string_view_front.cpp
cpp/db/: CMakeLists.txt
cpp/gtest_remote_cmake_project/: CMakeLists.txt
cpp/postgre_integration/: CMakeLists.txt
cpp/prepend_append/: prepend_append.cpp
cpp/props/: BuildWithMultipleProcesses.props  TreatWarningsAsErrors.props  WarningLevel4.props  _basic.props
cpp/rabbitmq/: rabbitmq.sln
cpp/raw_gcc_build/: main.cpp
cpp/tasks/: CMakeLists.txt  CMakeLists.txt.in
cpp/template_constructors_inheritance/: CMakeLists.txt
cpp/template_constructors_inheritance/include/: template_constructors_inheritance.h
cpp/template_constructors_inheritance/src/: main.cpp
hackerrank/cpp/: CMakeLists.txt
hackerrank/cpp/attribute_parser/: CMakeLists.txt
hackerrank/cpp/attribute_parser/app/: CMakeLists.txt
hackerrank/cpp/attribute_parser/app/src/: main.cpp
hackerrank/cpp/attribute_parser/lib/: CMakeLists.txt
hackerrank/cpp/attribute_parser/lib/include/: attribute_parser.h  node.h
hackerrank/cpp/attribute_parser/lib/src/: attribute_parser.cpp  node.cpp
hackerrank/cpp/attribute_parser/tests/: attribute_parser_tests.cpp  node_tests.cpp
haskell/first_step/: FirstStep.hs
leetcode/cpp/: CMakeLists.txt
leetcode/cpp/sum_of_two/: CMakeLists.txt
leetcode/cpp/sum_of_two/include/: sum_of_two.h
leetcode/cpp/sum_of_two/src/: sum_of_two.cpp
leetcode/cpp/sum_of_two/tests/: sum_of_two_tests.cpp
leetcode/cpp/zig_zag_conv/: CMakeLists.txt
leetcode/cpp/zig_zag_conv/include/: zig_zag_conv.h
leetcode/cpp/zig_zag_conv/src/: zig_zag_conv.cpp
leetcode/cpp/zig_zag_conv/tests/: zig_zag_conv_tests.cpp
leetcode/two_sum/: CMakeLists.txt
python/: base_64_encode.py  fiximate_parser.py  fiximate_tags_from_file.py
sql/psql/: initializatio.sql
tasks_for_interview/: random_dictinary.cpp
vs_ast_snippits/stack_delete_order/: stack_delete_order.cpp
vs_cmake/vs_cmake_cheks/: CMakeLists.txt
vs_cmake/vs_cmake_cheks/rvalue_vs_lvalue/: CMakeLists.txt
vs_cmake/vs_cmake_cheks/rvalue_vs_lvalue/src/: rvalue_vs_lvalue.cpp
vs_cmake/vs_cmake_cheks/sv_substr_npos/: CMakeLists.txt
vs_cmake/vs_cmake_cheks/sv_substr_npos/src/: sv_substr_npos.cpp
(+65 files in other folders)
